# opscat

./: .gitignore  LICENSE  README.md  pyproject.toml
opscat/: __init__.py
opscat/alidns/: README.md  alidns.py  batch-input.example.csv
opscat/tls_secret_helper/: README.md  config.example.json  tls_secret_helper.py
scripts/etcdadm-cert-helper/: README.md  etcdadm-cert-helper.sh
scripts/k8s/: README.md  docker-rm.sh  kube-delete-orphan-pods.sh  kube-desc-node.sh  kube-exec-pod.sh  kube-join-nodes.sh  kube-kubeconfig-selector.sh  tke-kube-user.sh
scripts/tls-selfsigned-cert/: README.md  tls-selfsigned-cert.sh
